--- a/index.html
+++ b/index.html
@@ -2,115 +2,245 @@
 <html lang="en">
 
 <head>
-    <!------------ Meta Tags ------------>
+
+    <!----- Meta tags ----->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!------------ Favicon ------------->
-    <link rel="shortcut icon" href="Assets/Image/Logo/Light.png" type="image/x-icon">
-
-    <!------------ Title ------------>
+    <!------- Title ------->
     <title>ბისნა - ტურები საქართველოში</title>
 
-    <!------------ CDN CSS Links ------------>
-    <!-- Bootstrap 5.3 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <!-- Owl Carousel CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
-    <!-- FontAwesome 6.4 -->
+    <!------ Favicons ----->
+    <link rel="shortcut icon" href="Assets/Image/Logo/Light.png" type="image/x-icon">
+
+    <!--=========== CDN CSS Links ===========-->
+    <!-- Font Awesome 6.4.0 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Bootstrap 5.3.0 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <!-- Swiper JS 9.3.2 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
 
-
-    <!------------ Main CSS Link ------------>
+    <!--=========== Main CSS Link ===========-->
     <link rel="stylesheet" href="Assets/Styles/style.css">
-
 </head>
 
 <body>
-    <!------------ Header & Navbar start ------------>
+
+    <!--========== Header start ==========-->
     <header>
-        <a href="" class="logo">logo</a>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"><img src="Assets/Image/Logo/Light.png" height="40" alt=""></a>
 
-        <div class="navigation">
-            <ul class="menu">
-                <li class="menu-item"><a href="#">მთავარი</a></li>
-                <li class="menu-item"><a href="#">ტურები</a></li>
-                <li class="menu-item"><a href="#">ადგილები</a></li>
-                <li class="menu-item"><a href="#">ტურისტული პროდუქტები <i class="fa-solid fa-chevron-down"></i></a></li>
-                <li class="menu-item"><a href="#">გალერეა <i class="fa-solid fa-chevron-down"></i></a></li>
-                <li class="menu-item"><a href="#">ჩვენ შესახებ <i class="fa-solid fa-chevron-down"></i></a></li>
-                <li class="menu-item"><a href="#">დაჯავშნე ტური</a></li>
-                <li class="menu-item"><a href="#">კონტაქტი</a></li>
-            </ul>
-        </div>
+                <div class="offcanvas offcanvas-start" tabindex="-1" id="navigation-menu">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title">სანავიგაციო მენიუ</h5>
+                        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+                            aria-label="Close"><i class="fa-solid fa-xmark"></i>
+                        </button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">მთავარი</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">ტურები</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">ადგილები</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    ტურისტული პროდუქტები <i class="fa-solid fa-chevron-down"></i>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li>
+                                        <a class="dropdown-item" href="#"><i class="fa-solid fa-bed"></i> დაბინავება</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="#"><i class="fa-solid fa-burger"></i> კვება</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="#"><i class="fa-solid fa-face-grin-hearts"></i>
+                                            გართობა
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="#"><i class="fa-solid fa-face-surprise"></i>
+                                            ექსტრემი & რეკრეაცია
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="#"><i class="fa-solid fa-person-half-dress"></i>
+                                            გიდები
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="#"><i class="fa-solid fa-truck-fast"></i>
+                                            ტრანსპორტირება
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="#"><i class="fa-solid fa-car-side"></i>
+                                            ავტოგაქირავება
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    გალერეა <i class="fa-solid fa-chevron-down"></i>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li>
+                                        <a class="dropdown-item" href="#"><i class="fa-solid fa-image"></i>
+                                            ფოტო გალერეა
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="#"><i class="fa-solid fa-film"></i>
+                                            ვიდეო გალერეა
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    ჩვენ შესახებ <i class="fa-solid fa-chevron-down"></i>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li>
+                                        <a class="dropdown-item" href="#"><i class="fa-solid fa-circle-info"></i>
+                                            ბისნას შესახებ
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="#"><i class="fa-solid fa-circle-info"></i>
+                                            საქართველოს შესახებ
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="#"><i class="fa-solid fa-circle-info"></i>
+                                            როგორ დავჯავშნოთ ტური
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="#"><i class="fa-solid fa-circle-info"></i>
+                                            ხ.დ.შ
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link">დაჯავშნე ტური</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link">კონტაქტი</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="buttons-list">
+
+                    <!-- Lang change button & dropdown -->
+                    <div class="dropdown-center line">
+                        <button class="btn lang-btn dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            <img src="Assets/Image/Lang/GEO.png" alt="">
+                            &nbsp;ქარ&nbsp;<i class="fa-solid fa-arrows-up-down"></i>
+                        </button>
+                        <ul class="dropdown-menu lang-menu">
+                            <li>
+                                <a class="dropdown-item lang-item" href="#">
+                                    <img src="Assets/Image/Lang/GEO.png" alt="">
+                                    &nbsp;ქარ
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item lang-item" href="#">
+                                    <img src="Assets/Image/Lang/ENG.png" alt="">
+                                    &nbsp;ინგ
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <!-- Responsive Navbar close & open button -->
+                    <button class="navbar-toggler nav-btn" type="button" data-bs-toggle="offcanvas"
+                        data-bs-target="#navigation-menu" aria-controls="navigation-menu" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <i class="fa-solid fa-bars"></i>
+                    </button>
+
+                    <!-- Search button -->
+                    <button class="btn nav-btn">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </button>
+
+                    <!-- Settings Button -->
+                    <button class="btn nav-btn">
+                        <i class="fa-solid fa-gear"></i>
+                    </button>
+                </div>
+            </div>
+        </nav>
     </header>
-    <!------------ Header & Navbar end ------------>
+    <!--========== Header end ==========-->
+
+
+    <!--========== ==========-->
+    <!--========== ==========-->
+
+
+    <!--========== ==========-->
+    <!--========== ==========-->
+
+
+    <!--========== ==========-->
+    <!--========== ==========-->
+
+
+    <!--========== ==========-->
+    <!--========== ==========-->
+
+
+    <!--========== ==========-->
+    <!--========== ==========-->
 
 
 
-    <!------------ Hero start ------------>
-    <!------------ Hero end ------------>
 
 
 
-    <!------------ How to works bisna? start ------------>
-    <!------------ How to works bisna? end ------------>
 
 
-
-    <!------------ Call to action start ------------>
-    <!------------ Call to action end ------------>
-
-
-
-    <!------------ Popular tours strart ------------>
-    <!------------ Popular tours end ------------>
-
-
-
-    <!------------ Popular places start ------------>
-    <!------------ Popular places end ------------>
-
-
-
-    <!------------ Popular guide start ------------>
-    <!------------ Popular guide end ------------>
-
-
-    <!------------ Popular cars start ------------>
-    <!------------ Popular cars end ------------>
-
-
-
-    <!------------ CDN JS Links ------------>
-    <!-- jQuery 3.6 -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!-- Owl Carousel JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-    <!-- Bootstrap 5.3 -->
+    <!--=========== CDN JS Links ===========-->
+    <!-- Bootstrap 5.3.0 -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
         integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
         crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
 
+    <!-- Swiper JS 9.3.2 -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+
+    <!--=========== Main JS Link ===========-->
     <script src="Assets/Script/script.js"></script>
 </body>
 
 </html>
 
-
-
-<!------------ ------------>
-<!------------ ------------>
-<!------------ ------------>
-<!------------ ------------>
-<!------------ ------------>
-<!------------ ------------>
+<!------- ------->
