--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 
 <body>
 
+    <!--------------- ScrollBar start --------------->
+    <div class="scrollbar"></div>
+    <!--------------- ScrollBar end --------------->
+
     <!--========== Header start ==========-->
     <header>
         <nav class="navbar navbar-expand-lg">
@@ -39,7 +43,7 @@
 
                 <div class="offcanvas offcanvas-start" tabindex="-1" id="navigation-menu">
                     <div class="offcanvas-header">
-                        <h5 class="offcanvas-title">სანავიგაციო მენიუ</h5>
+                        <h5 class="offcanvas-title"><i class="fa-solid fa-bars-staggered"></i> სანავიგაციო მენიუ</h5>
                         <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
                             aria-label="Close"><i class="fa-solid fa-xmark"></i>
                         </button>
@@ -152,45 +156,48 @@
 
                 <div class="buttons-list">
 
+                    <!-- Responsive Navbar close & open button -->
+                    <button class="navbar-toggler nav-btn" type="button" data-bs-toggle="offcanvas"
+                        data-bs-target="#navigation-menu" aria-controls="navigation-menu" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <i class="fa-solid fa-bars-staggered"></i>
+                    </button>
+
+                    <!-- Search button -->
+                    <button type="button" class="btn nav-btn" data-bs-toggle="modal" data-bs-target="#search-menu">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </button>
+
+                    <!-- Settings Button -->
+                    <div class="line">
+                        <button class="btn nav-btn" type="button" data-bs-toggle="offcanvas"
+                            data-bs-target="#settings-menu" aria-controls="settings-menu">
+                            <i class="fa-solid fa-gear"></i>
+                        </button>
+                    </div>
+
                     <!-- Lang change button & dropdown -->
-                    <div class="dropdown-center line">
+                    <div class="dropdown-center">
                         <button class="btn lang-btn dropdown-toggle" type="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             <img src="Assets/Image/Lang/GEO.png" alt="">
-                            &nbsp;ქარ&nbsp;<i class="fa-solid fa-arrows-up-down"></i>
+                            &nbsp;Geo&nbsp;<i class="fa-solid fa-arrows-up-down"></i>
                         </button>
                         <ul class="dropdown-menu lang-menu">
                             <li>
                                 <a class="dropdown-item lang-item" href="#">
                                     <img src="Assets/Image/Lang/GEO.png" alt="">
-                                    &nbsp;ქარ
+                                    &nbsp;Geo
                                 </a>
                             </li>
                             <li>
                                 <a class="dropdown-item lang-item" href="#">
                                     <img src="Assets/Image/Lang/ENG.png" alt="">
-                                    &nbsp;ინგ
+                                    &nbsp;Eng
                                 </a>
                             </li>
                         </ul>
                     </div>
-
-                    <!-- Responsive Navbar close & open button -->
-                    <button class="navbar-toggler nav-btn" type="button" data-bs-toggle="offcanvas"
-                        data-bs-target="#navigation-menu" aria-controls="navigation-menu" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <i class="fa-solid fa-bars"></i>
-                    </button>
-
-                    <!-- Search button -->
-                    <button class="btn nav-btn">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                    </button>
-
-                    <!-- Settings Button -->
-                    <button class="btn nav-btn">
-                        <i class="fa-solid fa-gear"></i>
-                    </button>
                 </div>
             </div>
         </nav>
@@ -198,16 +205,242 @@
     <!--========== Header end ==========-->
 
 
-    <!--========== ==========-->
-    <!--========== ==========-->
+    <!--========== Settings Menu start ==========-->
+    <div class="offcanvas offcanvas-start" tabindex="-1" id="settings-menu" aria-labelledby="settingsLabel">
+        <div class="offcanvas-header">
+            <!-- Settings Menu title-->
+            <h5 class="offcanvas-title" id="settingsLabel">
+                <i class="fa-solid fa-gear"></i> პარამეტრები
+            </h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close">
+                <i class="fa-solid fa-xmark"></i>
+            </button>
+        </div>
+        <div class="offcanvas-body settings-body">
+            <div class="settings-container">
+                <!------------ Dark & Light Mode ------------>
+                <div class="settings-item">
+                    <div class="settings-header">
+                        <!-- Item title -->
+                        <div class="align-items-center mb-2">
+                            <div>
+                                <div class="settings-header-icon">
+                                    <i class="fa-solid fa-moon"></i>
+                                </div>
+                                ღამის რეჟიმი
+                            </div>
+                        </div>
+                        <!-- Item description -->
+                        <p>
+                            დაარეგულირეთ <b>ბისნას</b> გარეგნობა, რათა შეამციროთ მბზინვარება
+                            და დაასვენოთ თვალები.
+                        </p>
+                    </div>
+
+                    <div class="mt-3">
+                        <!-- Dark mode switch -->
+                        <div class="settings-switch">
+                            <label class="d-flex justify-content-between align-items-center" for="dark-mode-on">
+                                <p>ჩართვა</p>
+                                <input class="form-check-input" value="1" type="radio" name="DarkMode"
+                                    id="dark-mode-on" />
+                            </label>
+                        </div>
+                        <!-- Light mode switch -->
+                        <div class="settings-switch">
+                            <label class="d-flex justify-content-between align-items-center" for="dark-mode-off">
+                                <p>გამორთვა</p>
+                                <input class="form-check-input" value="0" type="radio" name="DarkMode"
+                                    id="dark-mode-off" checked />
+                            </label>
+                        </div>
+                    </div>
+                </div>
+
+                <!------------ Color Pallete ------------>
+                <div class="settings-item mt-2">
+                    <div class="settings-header">
+                        <!-- Item title -->
+                        <div class="align-items-center mb-2">
+                            <div>
+                                <div class="settings-header-icon">
+                                    <i class="fa-solid fa-droplet"></i>
+                                </div>
+                                გარემოს შეცვლა
+                            </div>
+                        </div>
+                        <!-- Item description -->
+                        <p class="mb-5">
+                            ზოგიერთ მოხმარებელს ვებ-გვერდიზე არსებული მთავარი ფერები დისკომფორტს უქმნიან, ამიტომ
+                            დაარეგულირეთ
+                            <b>ბისნას</b>
+                            გარემო, საკუთარი სურვილისამებრ.
+                        </p>
+                    </div>
+
+                    <div class="col-md-12 d-flex justify-content-center align-items-center">
+                        <div class="row">
+                            <div class="color default" id="default">
+                                <i class="color-checked fa fa-check-circle"></i>
+                            </div>
+                            <div class="color pink" id="pink">
+                                <i class="color-checked fa fa-check-circle"></i>
+                            </div>
+                            <div class="color green" id="green">
+                                <i class="color-checked fa fa-check-circle"></i>
+                            </div>
+                            <div class="color orange" id="orange">
+                                <i class="color-checked fa fa-check-circle"></i>
+                            </div>
+                            <div class="color red" id="red">
+                                <i class="color-checked fa fa-check-circle"></i>
+                            </div>
+                            <div class="color black" id="black">
+                                <i class="color-checked fa fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!------------ Font Size range ------------>
+                <div class="settings-item mt-2">
+                    <div class="settings-header">
+                        <!-- Item title -->
+                        <div class="align-items-center mb-2">
+                            <div>
+                                <div class="settings-header-icon">
+                                    <i class="fa-solid fa-font"></i>
+                                </div>
+                                შრიფტის ზომა
+                            </div>
+                        </div>
+                        <!-- Item description -->
+                        <p>
+                            დაარეგულირეთ <b>ბისნას</b> გარეგნობა, მოირგეთ შიფტის ზომა
+                            საკუთარი სურვილისამებრ.
+                        </p>
+                    </div>
+
+                    <div class="mt-3">
+                        <!-- Small mode switch -->
+                        <div class="settings-switch">
+                            <label class="d-flex justify-content-between align-items-center" for="FontSize-small">
+                                <p>პატარა</p>
+                                <input class="form-check-input" value="0" type="radio" name="FontSize"
+                                    id="FontSize-small" />
+                            </label>
+                        </div>
+                        <!-- Normall mode switch -->
+                        <div class="settings-switch">
+                            <label class="d-flex justify-content-between align-items-center" for="FontSize-normall">
+                                <p>სტანდარტი</p>
+                                <input class="form-check-input" value="1" type="radio" name="FontSize"
+                                    id="FontSize-normall" checked />
+                            </label>
+                        </div>
+                        <!-- Big mode switch -->
+                        <div class="settings-switch">
+                            <label class="d-flex justify-content-between align-items-center" for="FontSize-big">
+                                <p>დიდი</p>
+                                <input class="form-check-input" value="1" type="radio" name="FontSize"
+                                    id="FontSize-big" />
+                            </label>
+                        </div>
+                    </div>
+                </div>
+
+                <!------------ ScrollBar button start ------------>
+                <div class="settings-item mt-2">
+                    <div class="settings-header">
+                        <!-- Item title -->
+                        <div class="align-items-center mb-2">
+                            <div>
+                                <div class="settings-header-icon">
+                                    <i class="fa-solid fa-spinner"></i>
+                                </div>
+                                გადახვევის პროგრესი
+                            </div>
+                        </div>
+                        <!-- Item description -->
+                        <p>
+                            შესაძლოა ვებ-გვერდზე არსებული ტექსტური ინფორმაცია დიდია და არ
+                            იცი სად აქვს დასასრული. ჩართე გადახვევის პროგრესი და შეიტყვე
+                            მცოცავი ხაზის დახმარებით რა ნაწილი გაქვთ წანაკითხი და რა
+                            დაგრჩათ.
+                        </p>
+                    </div>
+
+                    <div class="mt-3">
+                        <!-- Border none mode switch -->
+                        <div class="settings-switch">
+                            <label class="d-flex justify-content-between align-items-center" for="scrollbar-on">
+                                <p>ჩართვა</p>
+                                <input class="form-check-input" value="1" type="radio" name="scrollBar"
+                                    id="scrollbar-on" />
+                            </label>
+                        </div>
+                        <!-- Bordered mode switch -->
+                        <div class="settings-switch">
+                            <label class="d-flex justify-content-between align-items-center" for="scrollbar-off">
+                                <p>გამორთვა</p>
+                                <input class="form-check-input" value="0" type="radio" name="scrollBar"
+                                    id="scrollbar-off" checked />
+                            </label>
+                        </div>
+                    </div>
+                </div>
+                <!------------ ScrollBar button end ------------>
+            </div>
+        </div>
+    </div>
+    <!--========== Settings Menu end ==========-->
 
 
-    <!--========== ==========-->
-    <!--========== ==========-->
+    <!--========== Search Menu start ==========-->
+    <div class="modal fade" id="search-menu" tabindex="-1" aria-labelledby="search-menuLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="search-menuLabel">
+                        <i class="fa-solid fa-magnifying-glass"></i> ძიება
+                    </h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                        <i class="fa-solid fa-xmark"></i>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="search-menu">
+                        <input type="email" class="form-control mb-3" id="exampleFormControlInput1"
+                            placeholder="name@example.com">
+
+                        <ul class="list-group often-search">
+                            <li class="list-group-item">An item</li>
+                            <li class="list-group-item">A second item</li>
+                            <li class="list-group-item">A third item</li>
+                            <li class="list-group-item">A fourth item</li>
+                            <li class="list-group-item">And a fifth one</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--========== Search Menu end ==========-->
 
 
-    <!--========== ==========-->
-    <!--========== ==========-->
+    <!--========== Cookie start ==========-->
+    <div class="cookie-container">
+        <div id="cookie-popup">
+            <p>
+                ჩვენ ვიყენებთ ქუქიებს, რათა გავაუმჯობესოთ <b>ბისნას</b> თქვენი
+                მოხმარებისთვის. ჩვენი ვებსაიტის გამოყენების გაგრძელებით თქვენ
+                ეთანხმებით ქუქიების გამოყენება.
+            </p>
+            <button id="accept-cookie">ვეთანხმები</button>
+            <a id="learn-more" href="#">ქუქიების შესახებ</a>
+        </div>
+    </div>
+    <!--========== Cookie end ==========-->
 
 
     <!--========== ==========-->
@@ -233,10 +466,10 @@
         integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
-
     <!-- Swiper JS 9.3.2 -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-
+    <!-- Google -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--=========== Main JS Link ===========-->
     <script src="Assets/Script/script.js"></script>
 </body>
