--- a/index.html
+++ b/index.html
@@ -1876,7 +1876,7 @@
 
 
     <!--================ registration banner section start ================-->
-    <div class="p-3 mt-5 d-flex align-items-center justify-content-center text-center cta" data-aos="zoom-out-right">
+    <div class="p-3 mt-5 d-flex align-items-center justify-content-center text-center cta" data-aos="fade-up-right">
         <div class="container-fluid">
             <h5>ავტორიზაცია</h5>
             <p class="text-center mt-3 m-auto">
@@ -2342,8 +2342,8 @@
     <!--================ Car rent section end ================-->
 
     <!--================ Contact Section start ================-->
-    <section id="contact" class="contact pt-4 pb-5 mt-5" data-aos="zoom-out-right">
-        <div class="container" data-aos="zoom-out-left">
+    <section id="contact" class="contact pt-4 pb-5 mt-5" data-aos="fade-up-right">
+        <div class="container">
             <div class="section-title text-center">
                 <h2>კონტაქტი</h2>
                 <p>
@@ -2351,9 +2351,10 @@
                     მომსახურეობით!
                 </p>
             </div>
+
         </div>
 
-        <div class="container" data-aos="zoom-out-left">
+        <div class="container">
             <div class="row mt-5">
                 <div class="col-lg-6">
                     <div class="row">
@@ -2383,7 +2384,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-6" data-aos="zoom-in-left">
+                <div class="col-lg-6">
                     <form action="" method="post" role="form" class="php-email-form">
                         <div class="row">
                             <div class="col-md-6 form-group">
@@ -2510,7 +2511,7 @@
     <!--========== Difficulty list end ==========-->
 
     <!--========== Cookie start ==========-->
-    <div class="cookie-container" data-aos="zoom-out-right">
+    <div class="cookie-container">
         <p>
             ჩვენ ვიყენებთ ქუქიებს, რათა გავაუმჯობესოთ <b>ბისნას</b> თქვენი
             მოხმარებისთვის. ჩვენი ვებსაიტის გამოყენების გაგრძელებით თქვენ
@@ -2524,12 +2525,12 @@
     <!--========== Cookie end ==========-->
 
     <!--========== Footer start ==========-->
-    <footer id="footer" data-aos="zoom-out-left">
+    <footer id="footer" data-aos="fade-up-right">
         <div class="footer-top mt-5">
             <div class="container">
                 <div class="row">
 
-                    <div class="col-lg-3 col-md-6" data-aos="zoom-out-right">
+                    <div class="col-lg-3 col-md-6">
                         <div class="footer-info">
                             <h3>ადგილმდებარეობა</h3>
                             <p>
@@ -2550,10 +2551,10 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-2 col-md-6 footer-links" data-aos="zoom-out-right">
+                    <div class="col-lg-2 col-md-6 footer-links">
                         <h4>ხშირი ბმულები</h4>
                         <ul>
-                            <li><i class=" bx bx-chevron-right"></i> <a href="#">დაბინავება</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="#">დაბინავება</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="#">კვება</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="#">გართობა</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="#">ექსტრემი & რეკრეაცია</a></li>
@@ -2562,7 +2563,7 @@
                         </ul>
                     </div>
 
-                    <div class="col-lg-3 col-md-6 footer-links" data-aos="zoom-out-left">
+                    <div class="col-lg-3 col-md-6 footer-links">
                         <h4>ჩვენ შესახებ</h4>
                         <ul>
                             <li><i class="bx bx-chevron-right"></i> <a href="#">ბისნას შესახებ</a></li>
@@ -2572,7 +2573,7 @@
                         </ul>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 footer-newsletter" data-aos="zoom-out-left">
+                    <div class="col-lg-4 col-md-6 footer-newsletter">
                         <h4>სიახლეები</h4>
                         <p>გამოგვიწერეთ რათა არ გამოტოვოთ სიახლეები ბისნაზე!</p>
                         <form action="" method="post">
