--- a/index.html
+++ b/index.html
@@ -919,7 +919,7 @@
                                     <h6 class="card-title">ცხვანდირის ტბები</h5>
                                 </a>
                                 <p class="card-text">
-                                    რამე ტექსტი აღწერა ამ პროდუქტის შესახებ. და ეს არის ტექსტის მაქსიმუმი lenth...
+                                    <!-- რამე ტექსტი აღწერა ამ პროდუქტის შესახებ. და ეს არის ტექსტის მაქსიმუმი lenth... -->
                                 </p>
                             </div>
                             <div class="card-footer d-flex justify-content-between">
@@ -2525,7 +2525,7 @@
     <!--========== Cookie end ==========-->
 
     <!--========== Footer start ==========-->
-    <footer id="footer" data-aos="fade-up-right">
+    <footer id="footer" data-aos="fade-up-left">
         <div class="footer-top mt-5">
             <div class="container">
                 <div class="row">
@@ -2543,10 +2543,18 @@
                                 <a href="#" data-bs-toggle="tooltip" data-bs-title="Facebook">
                                     <i class="fa-brands fa-facebook-f"></i>
                                 </a>
-                                <a href="#" data-bs-toggle="tooltip" data-bs-title="Instagram"><i class="fa-brands fa-instagram"></i></a>
-                                <a href="#" data-bs-toggle="tooltip" data-bs-title="Twitter"><i class="fa-brands fa-twitter"></i></a>
-                                <a href="#" data-bs-toggle="tooltip" data-bs-title="Linkedin"><i class="fa-brands fa-linkedin-in"></i></a>
-                                <a href="#" data-bs-toggle="tooltip" data-bs-title="YouTube"><i class="fa-brands fa-youtube"></i></a>
+                                <a href="#" data-bs-toggle="tooltip" data-bs-title="Instagram">
+                                    <i class="fa-brands fa-instagram"></i>
+                                </a>
+                                <a href="#" data-bs-toggle="tooltip" data-bs-title="Twitter">
+                                    <i class="fa-brands fa-twitter"></i>
+                                </a>
+                                <a href="#" data-bs-toggle="tooltip" data-bs-title="Linkedin">
+                                    <i class="fa-brands fa-linkedin-in"></i>
+                                </a>
+                                <a href="#" data-bs-toggle="tooltip" data-bs-title="YouTube">
+                                    <i class="fa-brands fa-youtube"></i>
+                                </a>
                             </div>
                         </div>
                     </div>
